assets/css/style.css
/* ----CSS Reset Styles---- */

* {
    padding: 0%;
    margin: 0%;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    font-family: 'Poppins', sans-serif;
}

body {
    background-color: #121212;
    color:  #b2b1ad;
}

/* ----Navigation Styles---- */

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #272727;
    min-height: 10vh;
    font-size: 20px;
    color: #fbf9fa;
    text-transform: uppercase;
    padding: 0px 10px;
}

.links {
    color: #2b2024;
    font-size: 14px;
    letter-spacing: 2px;
    display: flex;
    width: 50%;
    justify-content: space-between;
    transition: all ease-in-out 0.5s;
}

.links a {
    color:#e3e3e3;
}

.links a:hover {
    color: #fd0054;
    font-weight: 600;
}

.icon {
    display: none;
}

.icon div {
    width: 20px;
    height: 2px;
    margin: 5px;
    background-color: #FFFFFF;
    transition: all 0.3s ease;
}

span {
    text-shadow: 3px 2px 2px #17252A;
}

/* ----Content Styles---- */

.content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 30px;
}

section {
    width: 95%;
    line-height: 25px;
    Margin: 0px 10px 20px 10px;
    padding: 10px;
    background-color:#1e1e1e;
    border-radius: 5px;
    box-shadow: 0 5px 20px rgba(0,0,0,.5);
    position: relative;
}

.title {
    font-size: 18px;
    color:#a80038;
    font-weight: 600;
    text-align:center;
}

hr {
    background-color: #FEFFFF;
    border-color: #FEFFFF;
    width: 95%;
    margin-bottom: 10px;
}

.aboutbox {
    display: flex;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: space-between;
}

.devphoto {
    border: 1px solid #292929;
    border-radius: 4px;
    padding: 5px;
    margin-right: 5px;
    margin-bottom: 5px;
    max-width: 150px;
    max-height: 150px;
}

.contact {
    color:#fbf9fa;
    font-size: 14px;
    display: flex;
    width: 100%;
    justify-content: space-around;
    flex-wrap: wrap;
    margin-top: 5px;
}

.contact a {
    color: #e3e3e3;
    padding: 5px;
}

.contact a:hover {
    color: #fd0054;
    transition: ease 0.3s;
}

footer {
    display: flex;
    justify-content: center;
    margin-top: 30px;
    color: #60696C;
}

/* ----CSS for Cards---- */

.container {
    position: relative;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 30px;
}

.container .card {
    background-color: #292929;
    border: 1px solid #17252A;
    transition: 0.3s;
    position: relative;
    width:300px;
    max-width: 300px;
    height: 250px;
    margin: 50px 10px;
    padding: 10px 15px;
    display: flex;
    flex-direction: column;
    box-shadow: 0 5px 10px rgba(0,0,0,.5);
}
.container .card .cardimg {
    position: relative;
    width: 260px;
    height: 124px;
    top: -60px;
    left: 0px;
    z-index: 1;
    box-shadow: 0px 5px 20px rgba(0,0,0,.2);
}

.container .card .cardimg img {
    width: 100%;
    filter: grayscale(100%);
}

.container .card:hover img{
    filter: none;
}

.container .card .cardcont {
    position: relative;
    margin-top: -30px;
    padding: 10px 15px;
    text-align: center;
    line-height: 15px;
    font-size: 12px;
}

.container .card .cardcont p {
    padding-bottom: 5px;
}

.container .card .cardcont h2 {
    font-size: 20px;
    padding-bottom: 15px;
    color: #a80038;
}

.container .card a {
    color: #e3e3e3;
    padding: 5px;
}

.container .card a:hover {
    color: #fd0054;
    transition: ease 0.3s;
}

/* -----Media Queries---- */

@media screen and (max-width: 650px) {
    .links {
        position: absolute;
        right: 0px;
        height: 100vh;
        width: 30%;
        top: 10vh;
        background-color:#272727;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        align-items: center;
        justify-content: space-evenly;
        transform: translateX(100%);
        transition: transform 0.5s ease-in-out;
        z-index: 2;
    }
    .links li {
        opacity: 0;
    }
    body {
        overflow-x: hidden;
    }
    .devphoto {
        width: 25%;
        height: 25%;
    }
    .icon {
        display: block;
        cursor: pointer;
    }
    .icon-active {
        transform: translateX(0%);
    }
    .row {
        justify-content: space-around;
    }
}

/* ----keyframes---- */

@keyframes linkTransition {
    from {
        opacity: 0;
        transform: translateX(200px);
    }
    to {
        opacity: 1;
        transform: translateX(0px);
    }
}

/* ----Icon Transformation Animation Classes---- */

.transform .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.transform .line2 {
    opacity: 0;
}

.transform .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

